# Cine-UNSURE

./: .gitignore  README.md  config.sh  install.sh  preprocessing.sh  pyproject.toml  requirements.txt  resume.sh  run.sh  run_acdc_clinical_evaluation.sh  run_acdc_pathology.sh  run_acdc_workflow.sh  run_deformation_workflow.sh  run_nodeo_dir_workflow.sh  run_patient_sequence_workflow.sh  run_pilot_clinical_calibration.sh  run_pilot_clinical_evaluation.sh  run_sde_sequence_posthoc_workflow.sh
configs/: default.yaml  infer_cinema_jacobian.yaml  infer_cinema_jacobian_all_datasets.yaml  infer_cinema_jacobian_batch.yaml  infer_cinema_mc_covariance_all_datasets.yaml  infer_cinema_score_cunsure_all_datasets.yaml  infer_cinema_score_cunsure_test.yaml  infer_cinema_score_cunsure_train.yaml  infer_cinema_score_cunsure_val.yaml  infer_medsam2_jacobian.yaml  nodeo_roi_splits.yaml  prepare_hdf5.yaml  train_cunsure.yaml  train_cunsure_score.yaml  train_draft_sde_rnn.yaml  train_latent_sde_observation.yaml  train_nodeo_dir_roi.yaml  train_nodeo_dir_roi_refined.yaml  train_nodeo_mean_deformation.yaml  train_nodeo_sde_deformation.yaml  train_sde_rnn_uncertainty.yaml  verify_few_frames_each_dataset.yaml  verify_few_frames_each_dataset_mc.yaml  verify_few_frames_each_dataset_mc_mps.yaml
datasets/: ACDC  M&M1  MnM2
docs/: acdc_only_workflow.md  draft_deformation_field_training_insert.tex  draft_deformation_revision_notes.md  draft_reference_additions.bib  final_draft_SDE_updated.aux  final_draft_SDE_updated.fdb_latexmk  final_draft_SDE_updated.fls  final_draft_SDE_updated.out  (+7 more)
(+120 files in other folders)
